# pycounts_bzrudski

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_bzrudski/: __init__.py  datasets.py  plotting.py  pycounts_bzrudski.py
src/pycounts_bzrudski/data/: flatland.txt
tests/: einstein.txt  test_pycounts_bzrudski.py
