[tool.poetry]
name = "pycounts_bzrudski"
version = "0.3.0"
description = "Calculate word counts in a text file!"
authors = ["bzrudski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.9.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
jupyter = "^1.1.0"
myst-nb = "^1.2.0"
sphinx-autoapi = "^3.5.0"
sphinx-rtd-theme = "^2.0.0"
python-semantic-release = "^8.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main" # branch to make releases of
# changelog_file = "CHANGELOG.md" # changelog file -- It already finds it
build_command = "poetry build" # build dists
# dist_path = "dist/" # where to put dists -- I think this may also already be covered...
upload_to_release = true # auto-create GitHub release - Already does it
upload_to_pypi = false # don't auto-upload to pypi
remove_dist = false # don't remove dists
patch_without_tag = true # patch release by default

[tool.semantic_release.publish]
upload_to_vcs_release = true
